hphp/hack/test/typecheck/union/map_corner_case.php.like_types.exp
File "map_corner_case.php", line 24, characters 5-17:
Invalid assignment (Typing[4110])
File "collections/Map.hhi", line 474, characters 31-33:
Expected dynamic because it is an unenforceable type
File "map_corner_case.php", line 14, characters 27-32:
But got Map<[unresolved], [unresolved]>
File "map_corner_case.php", line 25, characters 5-17:
Invalid assignment (Typing[4110])
File "collections/Map.hhi", line 474, characters 31-33:
Expected dynamic because it is an unenforceable type
File "map_corner_case.php", line 13, characters 27-32:
But got Map<[unresolved], [unresolved]>
File "map_corner_case.php", line 24, characters 5-17:
Invalid assignment (Typing[4110])
File "collections/Map.hhi", line 474, characters 31-33:
Expected dynamic because it is an unenforceable type
File "map_corner_case.php", line 14, characters 27-32:
But got Map<[unresolved], [unresolved]>
File "map_corner_case.php", line 25, characters 5-17:
Invalid assignment (Typing[4110])
File "collections/Map.hhi", line 474, characters 31-33:
Expected dynamic because it is an unenforceable type
File "map_corner_case.php", line 13, characters 27-32:
But got Map<[unresolved], [unresolved]>
File "map_corner_case.php", line 24, characters 5-17:
Invalid assignment (Typing[4110])
File "collections/Map.hhi", line 474, characters 31-33:
Expected dynamic because it is an unenforceable type
File "map_corner_case.php", line 14, characters 27-32:
But got Map<[unresolved], [unresolved]>
File "map_corner_case.php", line 25, characters 5-17:
Invalid assignment (Typing[4110])
File "collections/Map.hhi", line 474, characters 31-33:
Expected dynamic because it is an unenforceable type
File "map_corner_case.php", line 13, characters 27-32:
But got Map<[unresolved], [unresolved]>
File "map_corner_case.php", line 24, characters 5-17:
Invalid assignment (Typing[4110])
File "collections/Map.hhi", line 474, characters 31-33:
Expected dynamic because it is an unenforceable type
File "map_corner_case.php", line 14, characters 27-32:
But got Map<[unresolved], [unresolved]>
File "map_corner_case.php", line 25, characters 5-17:
Invalid assignment (Typing[4110])
File "collections/Map.hhi", line 474, characters 31-33:
Expected dynamic because it is an unenforceable type
File "map_corner_case.php", line 13, characters 27-32:
But got Map<[unresolved], [unresolved]>
File "map_corner_case.php", line 24, characters 5-17:
Invalid assignment (Typing[4110])
File "collections/Map.hhi", line 474, characters 31-33:
Expected dynamic because it is an unenforceable type
File "map_corner_case.php", line 14, characters 27-32:
But got Map<[unresolved], [unresolved]>
File "map_corner_case.php", line 25, characters 5-17:
Invalid assignment (Typing[4110])
File "collections/Map.hhi", line 474, characters 31-33:
Expected dynamic because it is an unenforceable type
File "map_corner_case.php", line 13, characters 27-32:
But got Map<[unresolved], [unresolved]>
